--- a/styles.css
+++ b/styles.css
@@ -116,3 +116,197 @@ header {
   background-color: #333;
   color: #fff;
 }
+
+/* -----Products----- */
+#products {
+  width: 100%;
+  display: flex;
+  padding: 70px 30px;
+  justify-content: space-around;
+  color: #2e2e2e;
+  flex-wrap: wrap;
+  gap: 50px;
+}
+.card-container {
+  display: flex;
+  width: 100%;
+  max-width: 1200px;
+  transition: transform 0.3s ease-in-out;
+  perspective: 1000px;
+}
+.product-cards {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+}
+
+.card {
+  width: 250px;
+  height: 350px;
+  margin: 0 20px;
+  background-color: white;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  position: relative;
+  perspective: 1000px;
+  border-radius: 15px;
+  border: 1px solid #808080;
+  transform-style: preserve-3d;
+  transition: transform 0.5s;
+}
+.card-front {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  /* top: 0;
+  left: 0; */
+  /* padding: 20px; */
+  backface-visibility: hidden;
+}
+.product-card-image {
+  padding: 40px 0px;
+  background-size: 100% 150px;
+  background-image: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.5),
+      rgba(0, 0, 0, 0.5)
+    ),
+    url("/Assets/Img/2.webp");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  color: #e6e6e6;
+  border-top-right-radius: 15px;
+  border-top-left-radius: 15px;
+}
+
+.btn-buy {
+  cursor: pointer;
+  padding: 10px 35px;
+  color: #e1e1e1;
+  background: #2e2e2e;
+  border-radius: 10px;
+  border: none;
+  margin: 20px;
+}
+
+/* .card-back {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  transform: rotateY(180deg);
+  text-align: center;
+  padding: 20px;
+  backface-visibility: hidden;
+} */
+
+.product-name {
+  margin-top: 20px;
+  margin-bottom: 0;
+  font-size: 20px;
+  text-align: center;
+}
+
+.product-price,
+.product-duration {
+  margin-top: 5px;
+  padding: 20px;
+  /* flex-direction: column; */
+  justify-content: space-between;
+  display: flex;
+  font-size: 15px;
+}
+.product-price p,
+.product-duration p {
+  font-weight: 700;
+}
+.product-price span,
+.product-duration span {
+  font-weight: 600;
+}
+/* .product-duration {
+  margin-top: 5px;
+  margin-bottom: 20px;
+} */
+
+.flip-icon {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+/* .arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: white;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+.left-arrow {
+  left: 20px;
+}
+
+.right-arrow {
+  right: 20px;
+} */
+
+/* .arrow:hover {
+  transform: scale(1.1);
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.5);
+}
+
+.arrow:before {
+  display: block;
+  width: 10px;
+  height: 10px;
+  border-top: 2px solid black;
+  border-right: 2px solid black;
+  transform: rotate(45deg);
+}
+
+.arrow-left:before {
+  transform: rotate(-135deg);
+} */
+
+.card-container.flip {
+  transform: rotateY(180deg);
+}
+
+.card-front,
+.card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden; /* oculta el contenido de la parte posterior de la tarjeta */
+}
+
+.card-front {
+  transform: rotateY(0deg); /* la tarjeta se muestra de frente por defecto */
+}
+
+.card-back {
+  transform: rotateY(
+    180deg
+  ); /* la tarjeta está girada 180 grados en el eje Y */
+}
+
+.card-container.flipped .card {
+  transform: rotateY(180deg);
+}
