--- a/styles.css
+++ b/styles.css
@@ -126,13 +126,19 @@ header {
   color: #2e2e2e;
   flex-wrap: wrap;
   gap: 50px;
+  position: relative;
 }
 .card-container {
   display: flex;
   width: 100%;
   max-width: 1200px;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 20px;
+
   transition: transform 0.3s ease-in-out;
-  perspective: 1000px;
+  /* perspective: 1000px; */
 }
 .product-cards {
   display: flex;
@@ -145,7 +151,7 @@ header {
 
 .card {
   width: 250px;
-  height: 350px;
+  height: 370px;
   margin: 0 20px;
   background-color: white;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
@@ -245,6 +251,9 @@ header {
   margin: 20px 0;
   font-size: 10px;
 }
+.itinerario li {
+  display: flex;
+}
 .itinerario span {
   font-weight: 700;
 }
@@ -258,7 +267,9 @@ header {
   transform: rotateY(0);
 }
 
-/* .arrow {
+/* ----ARROWS---- */
+
+.arrow {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -280,9 +291,9 @@ header {
 
 .right-arrow {
   right: 20px;
-} */
+}
 
-/* .arrow:hover {
+.arrow:hover {
   transform: scale(1.1);
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.5);
 }
@@ -298,17 +309,4 @@ header {
 
 .arrow-left:before {
   transform: rotate(-135deg);
-} */
-.card-back .itinerario {
-  display: flex;
-  flex-direction: column;
-}
-
-.itinerario li {
-  min-height: 1.5em;
-  padding-left: 1.5em;
-  text-indent: -1.5em;
-  display: flex;
-  /* flex-direction: column; */
-  justify-content: space-between;
 }
