--- a/styles.css
+++ b/styles.css
@@ -128,6 +128,16 @@ header {
   gap: 50px;
   position: relative;
 }
+.products-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 90%;
+}
+.categoria-container {
+  display: flex;
+  flex-direction: column;
+}
 .product-cards {
   display: flex;
   align-items: center;
