--- a/styles.css
+++ b/styles.css
@@ -133,6 +133,7 @@ header {
   flex-wrap: wrap;
   justify-content: center;
   flex-direction: column;
+  gap: 20px;
   max-width: 1200px;
   width: 90%;
 }
@@ -142,11 +143,10 @@ header {
   /* flex-direction: column; */
   align-items: center;
   justify-content: center;
-  /* height: 400px; */
   margin-bottom: 20px;
 }
 
-.categoria-container h2 {
+.categoria-container-tit {
   text-align: center;
   font-size: 2rem;
   font-weight: bold;
