--- a/styles.css
+++ b/styles.css
@@ -133,15 +133,14 @@ header {
 .products-container {
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
   justify-content: center;
-  flex-direction: column;
-  gap: 20px;
+  gap: 15px;
+  padding: 40px 0;
   max-width: 1200px;
-  width: 90%;
-  position: relative;
 }
 
-.categoria-container {
+.product-acc {
   display: flex;
   /* flex-direction: column; */
   align-items: center;
@@ -151,20 +150,13 @@ header {
   overflow: hidden;
 }
 
-.categoria-container-tit {
-  text-align: center;
-  font-size: 2rem;
-  font-weight: bold;
-  margin-bottom: 10px;
-  text-transform: uppercase;
-}
-
 .product-cards {
   display: flex;
   align-items: center;
   justify-content: center;
   width: 100%;
   overflow: hidden;
+  flex-direction: column;
   /* position: relative; */
 }
 .card-container {
@@ -297,7 +289,14 @@ header {
   display: block;
   transform: rotateY(0);
 }
-
+.btn-load {
+  background: none;
+  border: 1px solid var(--electric);
+  padding: 10px 35px;
+  color: var(--bg-white);
+  border-radius: 10px;
+  cursor: pointer;
+}
 /* ----ARROWS---- */
 
 /* ------------------------------About US---------------------------- */
