--- a/styles.css
+++ b/styles.css
@@ -120,25 +120,28 @@ header {
 
 /* -----Products----- */
 #products {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 40px 0;
-  max-width: 1200px;
   width: 100%;
+  display: flex;
+  padding: 70px 30px;
+  justify-content: space-around;
+  color: #2e2e2e;
+  flex-wrap: wrap;
+  gap: 50px;
+  position: relative;
+  /* white-space: nowrap; evita que la tarjeta se envuelva a la siguiente línea */
 }
 .products-container {
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
   justify-content: center;
-  gap: 15px;
-  padding: 40px 0;
+  flex-direction: column;
+  gap: 20px;
   max-width: 1200px;
+  width: 90%;
+  position: relative;
 }
 
-.product-acc {
+.categoria-container {
   display: flex;
   /* flex-direction: column; */
   align-items: center;
@@ -148,14 +151,22 @@ header {
   overflow: hidden;
 }
 
-/* .product-cards {
+.categoria-container-tit {
+  text-align: center;
+  font-size: 2rem;
+  font-weight: bold;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+}
+
+.product-cards {
   display: flex;
   align-items: center;
   justify-content: center;
   width: 100%;
   overflow: hidden;
-  flex-direction: column;
-} */
+  /* position: relative; */
+}
 .card-container {
   display: flex;
   width: 100%;
@@ -165,7 +176,6 @@ header {
   gap: 20px;
   margin-top: 20px;
   transition: transform 0.3s ease-in-out;
-  flex-direction: column;
 }
 
 .card {
@@ -177,7 +187,9 @@ header {
   perspective: 1000px;
   border-radius: 15px;
   border: 1px solid #808080;
-  flex-direction: column;
+  /* position: absolute; */
+  /* left: 0;
+  top: 0; */
 }
 .card-front {
   width: 100%;
@@ -285,14 +297,7 @@ header {
   display: block;
   transform: rotateY(0);
 }
-.btn-load {
-  background: none;
-  border: 1px solid var(--electric);
-  padding: 10px 35px;
-  color: var(--bg-white);
-  border-radius: 10px;
-  cursor: pointer;
-}
+
 /* ----ARROWS---- */
 
 /* ------------------------------About US---------------------------- */
