--- a/styles.css
+++ b/styles.css
@@ -155,11 +155,11 @@ header {
   flex-wrap: wrap;
   gap: 20px;
   margin-top: 20px;
-  transition: transform 0.3s ease-in-out;
   justify-content: space-between;
   flex-direction: column;
 }
 
+/* ------ */
 .card {
   width: 250px;
   height: 370px;
@@ -170,13 +170,20 @@ header {
   border-radius: 15px;
   border: 1px solid #808080;
   flex-direction: column;
+  position: relative;
+  transform-style: preserve-3d;
+  transition: transform 0.5s ease-in-out;
 }
 .card-front {
   width: 100%;
   height: 100%;
-  /* position: absolute; */
-  backface-visibility: hidden;
+  position: absolute;
+
+  transition: transform 0.5s ease-in-out;
+  transform-style: preserve-3d; /* Nueva propiedad */
+  transform: rotateY(0deg); /* Nueva propiedad */
 }
+
 .product-card-image {
   padding: 40px 0px;
   background-size: 100% 150px;
@@ -247,16 +254,20 @@ header {
   margin-right: 70px;
 }
 .card-back {
-  /* position: absolute; */
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  transform: rotateY(180deg);
   text-align: center;
   padding: 20px;
   backface-visibility: hidden;
+  transition: transform 0.5s ease-in-out;
+  background: #f97bbf;
+  transform-style: preserve-3d; /* Nueva propiedad */
+  transform: rotateY(180deg); /* Nueva propiedad */
 }
+
 .itinerario {
   white-space: pre-line;
   margin: 20px 0;
@@ -269,8 +280,9 @@ header {
   font-weight: 700;
 }
 .card.flipped .card-front {
-  display: none;
-  transform: rotateY(180deg);
+  /* display: none; */
+  transform: rotateY(-180deg);
+  visibility: hidden; /* <-- Agregado para ocultar la vista frontal durante la animación */
 }
 
 .card.flipped .card-back {
@@ -407,4 +419,4 @@ header {
   background: red;
 }
 
-/* ---------------------------------------------------------------------------------- */
+/* -----------------------------------------ZONA DE PRUEBAS----------------------------------------- */
