--- a/styles.css
+++ b/styles.css
@@ -166,11 +166,11 @@ header {
   margin: 0 20px;
   /* background-color: white; */
   background-color: transparent; /* establecemos el background-color como transparente */
-
+  backface-visibility: hidden;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
   perspective: 1000px;
   border-radius: 15px;
-  border: 1px solid #808080;
+  /* border: 1px solid #808080; */
   flex-direction: column;
   position: relative;
   transform-style: preserve-3d;
@@ -180,10 +180,12 @@ header {
   width: 100%;
   height: 100%;
   position: absolute;
-
+  backface-visibility: hidden;
+  border: 1px solid #808080;
   transition: transform 0.5s ease-in-out;
   transform-style: preserve-3d; /* Nueva propiedad */
   transform: rotateY(0deg); /* Nueva propiedad */
+  border-radius: 15px;
 }
 
 .product-card-image {
@@ -268,6 +270,7 @@ header {
   transform-style: preserve-3d;
   transform: rotateY(180deg);
   border-radius: 15px;
+  border: 1px solid #808080;
 }
 
 .itinerario {
